--- a/Laboratory.Web/Views/Test/MyView.cshtml
+++ b/Laboratory.Web/Views/Test/MyView.cshtml
@@ -6,10 +6,8 @@
         <span asp-validation-for="Name" class="text-danger"></span>
         <input type="text" id="Name" name="Name" value="@Model.Name" />
     </div>
-    <div>
-        <button type="submit">Generate PDF</button>
-    </div>
-    
+	<div>    </div>
+
 
 </form>
 
@@ -17,4 +15,6 @@
     <label for="Name">Name:</label>
     <input type="text" id="Name" name="Name" value="@Model.Name" />
     <button type="submit">Generate PDF</button>
+        <button type="submit">Generate PDF</button>
+
 </form> *@
